# llm-internal-rag-chat

./: .gitignore  CLAUDE.md  Dockerfile.frontend  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml
backend/: .env.example  pyproject.toml
backend/alembic/versions/: 2024_01_03_add_chat_tables.py
backend/backend/data/chroma/: chroma.sqlite3
backend/database/init/: 01-migrations.sql  02-seed.sql
backend/scripts/: create_index.py
backend/src/mermaid_llm/: main.py
backend/src/mermaid_llm/api/: schemas.py
backend/src/mermaid_llm/api/routers/: rag.py
backend/src/mermaid_llm/db/: __init__.py  models.py
backend/src/mermaid_llm/rag/: __init__.py  chain.py  config.py  embeddings.py  indexer.py  llm.py  loaders.py  prompts.py  retriever.py  splitter.py  state.py
backend/src/mermaid_llm/rag/nodes/: __init__.py  generate.py  retrieve.py
backend/src/mermaid_llm/rag/providers/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py
backend/src/mermaid_llm/services/: __init__.py  chat_repository.py
backend/tests/integration/: test_chat_sessions.py  test_rag_api.py
backend/tests/unit/rag/: test_indexer.py  test_loaders.py  test_splitter.py
docs/: deploy.md  install.md
frontend/apps/client-app/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/apps/client-app/e2e/: fixtures.ts  rag-chat.spec.ts
frontend/apps/client-app/src/: App.css  App.test.tsx  App.tsx
frontend/apps/client-app/src/components/: RAGChatHistory.tsx  RAGChatInput.test.tsx  RAGChatInput.tsx  RAGChatPanel.tsx  SessionSidebar.test.tsx  SessionSidebar.tsx
frontend/apps/client-app/src/core/: index.ts
frontend/apps/client-app/src/store/: RAGStore.test.ts  RAGStore.ts  index.ts
frontend/apps/client-app/src/test/: setup.ts
shared-config/tsconfig/: base.json
